2010-08-17  Chong Yidong  <cyd@stupidchicken.com>

	* eval.c (Flet, Feval, Fapply, apply_lambda): Use SAFE_ALLOCA
	(Bug#6214).

2010-08-14  Jan Djärv  <jan.h.d@swipnet.se>

	* doc.c (Fsnarf_documentation): Set skip_file only if p[1] is S.

2010-08-13  Jan Djärv  <jan.h.d@swipnet.se>

	* doc.c (Fsnarf_documentation): Initialize skip_file before
	build-files test.

2010-08-09  Peter O'Gorman <pogma@thewrittenword.com>  (tiny change)

	* s/hpux10-20.h (HAVE_TERMIOS, NO_TERMIO, ORDINARY_LINK): New
	definitions.
	(HAVE_TERMIO): Remove.

2010-08-06  Kenichi Handa  <handa@m17n.org>

	* charset.c: Include <stdlib.h>
	(struct charset_sort_data): New struct.
	(charset_compare): New function.
	(Fsort_charsets): New funciton.
	(syms_of_charset): Declare Fsort_charsets as a Lisp function.

	* coding.c (decode_coding_iso_2022): Fix checking of dimension
	number in CTEXT extended segment.

2010-08-01  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (syms_of_w32fns) <x-max-tooltip-size>: Fix typo in docstring.
	* xfns.c (syms_of_xfns) <x-max-tooltip-size>: Reflow docstring.

2010-07-30  Juanma Barranquero  <lekktu@gmail.com>

	* fns.c (Fsubstring_no_properties, Fnthcdr, Ffeaturep)
	(Fhash_table_size): Fix typos in docstrings.
	(Fmake_hash_table): Doc fix.

2010-07-28  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (syms_of_minibuf) <read-buffer-function>:
	Doc fix (bug#5625).

2010-07-27  Ken Brown  <kbrown@cornell.edu>

	* dired.c (DIRENTRY_NONEMPTY) [cygwin]: Use d_ino instead of
	the MSDOS definition.

2010-07-25  Christoph Scholtes  <cschol2112@gmail.com>

	* minibuf.c (Fread_buffer): Doc fix (bug#6528).

2010-07-22  Christoph Scholtes  <cschol2112@gmail.com>

	* window.c (Fwindow_height): Doc fix (bug#6518).

2010-07-21  Juanma Barranquero  <lekktu@gmail.com>

	* buffer.c (syms_of_buffer) <fringe-indicator-alist>: Doc fix.

2010-07-17  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_event_is_for_menubar): Also check that event window